--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Webpack | Bookmarks widget</title>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <div id="viewDiv"></div>
